# ToolBox

./: .clang-format  CMakeLists.txt  main.cpp
lib/qcustomplot/: qcustomplot.cpp  qcustomplot.h
plot/: osc_plot.cpp  osc_plot.h  osc_tracer.cpp  osc_tracer.h  oscilloscope.cpp  oscilloscope.h
signal/: data_generation.cpp  data_generation.h
ui/: monitor.cpp  monitor.h  monitor.ui  tool_box.cpp  tool_box.h  tool_box.ui
utils/network/: network_share.cpp  network_share.h
